# PODFCSSV

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  base.py  evaluate.py  inference.py  main.py  main_backup.py  new_main.py  pyproject.toml  raw_model_training.py  requirements.txt  ruff.toml  simulate_federated_flow.py  test.py  test_phase1.py  train.ipynb  train_mae.py
data/: prepare_data.py
docs/markdowns/: Complete-Pipeline-Guide.md
ppt/: FCSSV-PAD_Zeroth-Review.pptx  Vishnu v1_ PODFCSSV.pptx
src/: __init__.py  client.py  data.py  dataset.py  distillation_loss.py  federated.py  local_manager.py  loss.py  mae_with_adapter.py  main.py  prototype_manager.py  prototypes.py  server.py  utils.py
