[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podfcssv"
version = "0.4.0"
description = "Prototype-Oriented Distillation for Federated Continual Self-Supervised Vision"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sathish Kumar R"},
]
keywords = [
    "federated-learning",
    "continual-learning",
    "self-supervised-learning",
    "vision-transformers",
    "masked-autoencoders",
    "prototype-learning",
    "knowledge-distillation",
    "novelty-detection",
    "parameter-efficient-fine-tuning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sathishkumar67/PODFCSSV"
Repository = "https://github.com/sathishkumar67/PODFCSSV"
Issues = "https://github.com/sathishkumar67/PODFCSSV/issues"
Changelog = "https://github.com/sathishkumar67/PODFCSSV/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["src*"]
